k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ../docker-compose.yml convert
    kompose.version: 1.21.0 (HEAD)
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f ../docker-compose.yml convert
        kompose.version: 1.21.0 (HEAD)
      labels:
        io.kompose.service: database
    spec:
      containers:
      - image: mongo
        imagePullPolicy: IfNotPresent
        name: database
        ports:
        - containerPort: 27017
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        volumeMounts:
        - mountPath: /pa11ydata
          name: pa11y-mongo-volume
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: pa11y-mongo-volume
        persistentVolumeClaim:
          claimName: pa11y-mongo-volume
