k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f ../docker-compose.yml convert
    kompose.version: 1.21.0 (HEAD)
  labels:
    io.kompose.service: web
  name: web
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 4000
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
